--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,124 @@
-seaborn==0.11.2
+accelerate==0.24.0
+aiohttp==3.8.6
+aiosignal==1.3.1
+altair==5.1.2
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
+atlassian-python-api==3.41.3
+attrs==23.1.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+bitsandbytes==0.41.1
+blinker==1.6.3
+cachetools==5.3.2
+certifi==2023.7.22
+charset-normalizer==3.3.1
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+dataclasses-json==0.6.1
+Deprecated==1.2.14
+einops==0.7.0
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+filelock==3.12.4
+fiona==1.9.5
+fonttools==4.46.0
+frozenlist==1.4.0
+fsspec==2023.10.0
+geographiclib==2.0
+geopandas==0.14.1
+geopy==2.4.1
+gitdb==4.0.11
+GitPython==3.1.40
+greenlet==3.0.1
+html2text==2020.1.16
+huggingface-hub==0.17.3
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
+langchain==0.0.324
+langsmith==0.0.52
+llama-hub==0.0.19
+llama-index==0.7.21
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.8.2
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+networkx==3.2
+numpy==1.26.1
+oauthlib==3.2.2
+openai==0.28.1
+opencage==2.4.0
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.1.1
+Pillow==10.1.0
+protobuf==4.24.4
+psutil==5.9.6
+pyarrow==13.0.0
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydeck==0.8.1b0
+Pygments==2.16.1
+pyparsing==3.1.1
+pyproj==3.6.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+retrying==1.3.4
+rich==13.6.0
+rpds-py==0.10.6
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.3
+seaborn==0.13.0
+shapely==2.0.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.22
+streamlit==1.28.0
+sympy==1.12
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tiktoken==0.5.1
+tokenizers==0.14.1
+toml==0.10.2
+toolz==0.12.0
+torch==2.1.0
+tornado==6.3.3
+tqdm==4.66.1
+transformers==4.34.1
+tweepy==4.14.0
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==1.26.18
+validators==0.22.0
+watchdog==3.0.0
+wrapt==1.15.0
+yarl==1.9.2
+zipp==3.17.0
